js/js.translator/testData/incremental/invalidation/moveExportedCallableBetweenModules/lib2/l2.1.kt
package sample

@JsExport
fun foo(): Int = 1
